# qvm

./: CMakeLists.txt
include/qvm/: Command.h  ParameterMetadata.h  ProgramFile.h
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
src/app/: Config.h.template  Options.cpp  Options.h  SharedMemoryApplication.cpp  SharedMemoryApplication.h
src/dispatcher/: Dispatcher.cpp  Dispatcher.h  DispatcherConfig.h  DispatcherConfigImpl.cpp  DispatcherConfigImpl.h
src/interpreter/: Command.h  CommandHandler.h  CommandHandlersImpl.cpp  CommandHandlersImpl.h  Interpreter.h  InterpreterImpl.cpp  InterpreterImpl.h
src/io/: ParamMeta.h
src/io/command/: CommandFileReaderV1.cpp  CommandFileReaderV1.h  ProgramFileReaderV1.cpp  ProgramFileReaderV1.h
src/io/data/: CsvDataReader.cpp  CsvDataReader.h
src/memory/: LocalStringVault.cpp  LocalStringVault.h  Memory.h  SharedMemory.cpp  SharedMemory.h  StringVault.h
src/utils/: CancellationToken.h  Timer.cpp  Timer.h  utils.cpp  utils.h
test/: CMakeLists.txt
test/resources/: input.csv
test/resources/sqare_eq/: program.qvm
test/resources/zhordan/: A.csv  program.qvm
test/src/: CMakeLists.txt  utils_test.cpp
test/src/app/: app_test.cpp  options_test.cpp
test/src/dispatcher/: dispatcher_test.cpp
test/src/interpreter/: PseudoAsemblerLanguage.h  PseudoAssemblerLanguage.h  command_handlers_tests.cpp  interpreter_test.cpp
test/src/io/command/: command_file_reader_v1_test.cpp  product2x2.qvm  program_file_reader_v1_test.cpp
test/src/io/data/: csv_data_reader_test.cpp  input.csv
test/src/memory/: shared_memory_test.cpp
test/src/test-utils/: PseudoAssemblerLanguage.h  ResultIs.h
